--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "mypy[requests]>=1.18.2",
+    "pyyaml>=6.0.3",
     "requests>=2.32.5",
     "types-requests>=2.32.4.20250913",
 ]
