--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     curl \
     ca-certificates \
+    bash \
+    fontconfig \
+    gzip \
+    tar \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Starship
+RUN curl -fsSL https://starship.rs/install.sh | sh -s -- -y
+RUN echo 'eval "$(starship init bash)"' >> /root/.bashrc
+
 
 # Install uv
 ADD https://astral.sh/uv/install.sh /uv-installer.sh
